ConcurrencyTesting-1: Project Creation

--- a/Concurrency/pom.xml
+++ b/Concurrency/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>Concurrency</artifactId>
     <version>1.0.0</version>
     <name>Concurrency Thesis</name>
-    <description>this is just for Testing purposes</description>
+    <description>This is just for Testing purposes</description>
 
     
 </project>
